force-app/main/default/objects/Assessment_Question_Setting__mdt/Assessment_Question_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration settings for specific assessment questions</description>
    <label>Assessment Question Setting</label>
    <pluralLabel>Assessment Question Settings</pluralLabel>
</CustomObject>