force-app/main/default/objects/Assessment_Question_Setting__mdt/fields/Driven_Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Driven_Question_Name__c</fullName>
    <inlineHelpText>A question behavior that is driven by the driving question</inlineHelpText>
    <label>Driven Question Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>