force-app/main/default/objects/Assessment_Question_Setting__mdt/fields/Driving_Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Driving_Question_Name__c</fullName>
    <inlineHelpText>A question that is driving behavior of other questions</inlineHelpText>
    <label>Driving Question Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>