force-app/main/default/objects/Assessment_Question_Setting__mdt/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>denotes the purpose of the setting</description>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA Criteria</fullName>
                <default>true</default>
                <label>NA Criteria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>